[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "pyjwt>=2.12.1",
    "redis[asyncio]>=7.4.0",
    "uvicorn>=0.46.0",
    "websockets>=16.0",
]
